--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - DB_HOST=db
       - DB_NAME=${DB_NAME}
-      - DB_USER=db_user
+      - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - SECRET_KEY=${DJANGO_SECRET_KEY}
       - ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
@@ -22,7 +22,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=db_user
+      - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
 
   proxy:
