--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,8 +1,8 @@
 FROM nginxinc/nginx-unprivileged:1-alpine
-LABEL maintainer="bruno"
+LABEL maintainer="bruno.com"
 
 COPY ./default.conf.tpl /etc/nginx/default.conf.tpl
-COPY ./uwsgi_params /etc/nginx/uswgi_params
+COPY ./uwsgi_params /etc/nginx/uwsgi_params
 COPY ./run.sh /run.sh
 
 ENV LISTEN_PORT=8000
